<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="hi_movies_app">Hi, Movies App</string>
    <string name="tvonboardingone">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="tvonboardingtwo">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="tvonboardingthree">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</string>
    <string name="start">start</string>
</resources>